# CVMix-src

./: .travis.yml  CMakeLists.txt  ChangeLog  LICENSE.txt  README  README.md  TODO  cvmix_kpp.F90  old.tmp
.github/workflows/: run_test_suite.yml
CVMix_tools/: code_consistency.py  run_test_suite.sh
bld/: .gitignore  CompileFlags.mak  Makefile  README  cvmix_setup  setup
bld/python/: Makefile  cvmix_BL_driver-pointers-python.F90  run_cvmix.py
cmake_bin/: .gitignore
doc/: .gitignore  header  make_protex_file  protex
exe/: high_lat.nl  low_lat.nl
git_config/: git_commit_template.txt
inputdata/: .gitignore  uvbPfl.txt
ncl/: make_diff_plot-BryanLewis.ncl
reg_tests/: .gitignore  README
reg_tests/Bryan-Lewis/: BL_test.sh  input.nl  input_memcopy.nl  input_pointer.nl  memcopy_test.sh  plot_diff_coeffs.ncl  pointer_test.sh
reg_tests/common/: build.sh  check_inputdata.sh  environ.sh  parse_inputs.sh  plot_settings.ncl  run.sh  setup_inputdata.sh  usage.sh  version_consistency.ncl
reg_tests/double_diff/: double_diff-test.sh  input.nl  plot_diff_coeffs.ncl
reg_tests/kpp/: compare_interpolation_methods.ncl  input.nl  kpp-test.sh  plot_bulk_Rich.ncl  plot_flux_profiles.ncl
reg_tests/kpp-langmuir/: Langmuir-test.sh  input.nl
reg_tests/shear/: input.nl  plot_LMD_diff_coeffs.ncl  plot_PP_diff_coeffs.ncl  plot_diff_coeffs.ncl  shear-test.sh
reg_tests/shear-KPP/: Large_test.sh  input.nl  plot_diff_coeffs.ncl  plot_visc_coeffs.ncl
reg_tests/tidal-Simmons/: .gitignore  Simmons-test.sh  input.nl  plot_diff_coeffs.ncl  plot_tidal_energy_map.ncl  tidal_energy_gx1v6_20130512.nc
src/: CMakeLists.txt  Makefile  cvmix_driver.F90  cvmix_io.F90  cvmix_output.F90  dummy.F90  vmix_driver.F90  vmix_output.F90
src/drivers/: cvmix_BL_driver-mem_copy.F90  cvmix_BL_driver-pointers.F90  cvmix_KPP-shear_driver.F90  cvmix_Simmons-tidal_driver.F90  cvmix_bgrnd_BL.F90  cvmix_bgrnd_BL_memcopy.F90  cvmix_bgrnd_BL_pointer.F90  cvmix_ddiff_driver.F90  cvmix_ddiff_drv.F90  cvmix_kpp_drv.F90  cvmix_kpp_langmuir_drv.F90  cvmix_shear.F90  cvmix_shear_KPP.F90  cvmix_shear_drv.F90  cvmix_tidal_Simmons.F90  vmix_BL_driver-mem_copy.F90  vmix_BL_driver-pointers.F90  vmix_KPP-shear_driver.F90  vmix_Simmons-tidal_driver.F90  vmix_ddiff_driver.F90
src/shared/: Makefile  cvmix_background.F90  cvmix_convection.F90  cvmix_ddiff.F90  cvmix_kinds_and_types.F90  cvmix_kpp.F90  cvmix_math.F90  cvmix_put_get.F90  cvmix_shear.F90  cvmix_tidal.F90  cvmix_utils.F90  makedep.py  vmix_background.F90  vmix_convection.F90  vmix_ddiff.F90  vmix_kinds_and_types.F90  vmix_put_get.F90  vmix_shear.F90  vmix_tidal.F90
templates/: README  cvmix_MODULE.F90
